# zipserv

./: .gitignore  CMakeLists.txt  TODO.txt  copyright.txt  mysrv.cpp  notes.txt
android/: .gitignore  AndroidManifest.xml  bigplayer-key.keystore
android/jni/: Android.mk  Application.mk  jnizsrv.cpp  mimetypes.h  minizip  zsrv.cpp  zsrv.h
android/res/layout/: main.xml  mylist.xml
android/res/values/: strings.xml
android/src/com/example/hellojni/: HelloJni.java  MyFileSel.java  MyService.java
android/src/hu/bigplayer/zipservapp/: MyFileSel.java  MyService.java  ZipservApp.java
android/src/hu/bigplayer/zservapp/: MyFileSel.java  MyService.java  ZservApp.java
libarchives/: CMakeLists.txt  archives.cpp  archives.h  test_archives.cpp
libarchives/minizip/: Android.mk
libarchives/modchmlib/: CMakeLists.txt  chm_lib.c  chm_lib.h  list-chm.cpp  main.cpp
res/: notes.txt
src/: CMakeLists.txt  Copyright.txt  ReadMe.txt  main.cpp  mysrv.cpp  resource.h  toolchain-linux-32bit.cmake  toolchain-mingw32-32bit.cmake  winmain.cpp  zipserv_dialog.rc  zserv_dialog.rc  zsrv.cpp  zsrv.h
website/: TODO.txt  makesourcepack.sh
website/google-play/: Feature.Graphic.xcf
